# VGi

./: .gitignore  CMakeLists.txt  README.md  VGi.yml  appinfo.c  device.c  display.c  display.h  font_sun12x22.h  graphics.c  main.c  main.h  memory.c  misc.c  osd.c  osd.h  osd_font.h  osd_font_ter-u14b.h  osd_font_ter-u24b.h  threads.c
core/: appinfo.c  device.c  graphics.c  graphics_cs.c  graphics_dss.c  graphics_misc.c  graphics_rt.c  graphics_scenes.c  graphics_tex.c  input.c  memory.c  threads.c
src/: gui.c  gui.h  gui_font_ter-u14b.h  gui_font_ter-u18b.h  gui_font_ter-u24b.h  log.c  log.h  main.c  main.h  osd_font_ter-u18b.h
src/core/: appinfo.c  device.c  graphics.c  graphics_cg.c  graphics_cs.c  graphics_dss.c  graphics_misc.c  graphics_rt.c  graphics_scenes.c  graphics_tex.c  input.c  memory.c  threads.c
src/interpreter/: parser.c  parser.h
src/net/: cmd.c  cmd.h  cmd_def.c  cmd_def.h  cmd_def_gxm.c  cmd_def_hook.c  cmd_def_mem.c  net.c  net.h
